force-app/main/default/objects/FEC_API_Setting__c/FEC_API_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FEC API Setting</label>
</CustomObject>