force-app/main/default/objects/FEC_API_Setting__c/fields/FEC_Call_Mock__c.field-meta.xml
<CustomField>
    <fullName>FEC_Call_Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Mock</label>
    <type>Checkbox</type>
</CustomField>