force-app/main/default/objects/FEC_API_Setting__c/fields/FEC_Enviroment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Enviroment__c</fullName>
    <label>Enviroment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>