force-app/main/default/objects/FEC_API_Setting__c/fields/FEC_Test_Service_Error_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Test_Service_Error_Account_Number__c</fullName>
    <description>Account number to simulate Customer Search service error in UI. For Case Record Type Interaction, Case.FEC_Is_Test_API__c must be true.</description>
    <label>Test Service Error Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>